--- a/a2.html
+++ b/a2.html
@@ -679,8 +679,7 @@ function getColumnName(location)
 			// We don't set the domain yet as data isn't loaded
 			var xBarScale = d3.scaleLinear()
 							.domain([0, 5])
-							.range([0, svgbar_width])
-							;
+							.range([0, svgbar_width]);
 						
 			//Define Y axis
 			var yBarAxis = d3.axisLeft()
